v/0.1.0/_sources/examples/index.rst.txt
:orphan:

Examples
========

This is a collection of examples in Earth-2 Studio that demonstrate various functionality
and commonly used workflows.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple deterministic inference workflow.">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_01_simple_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_01_simple_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running Simple Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple ensemble inference workflow.">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_02_ensemble_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02_ensemble_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running Ensemble Inference</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generative down-sampling over Taiwan using CorrDiff diffusion model.">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_03_corrdiff_inference_thumb.png
    :alt:

  :ref:`sphx_glr_examples_03_corrdiff_inference.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generative Down Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Intermediate ensemble inference using a custom perturbation method.">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_04_ensemble_workflow_extend_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04_ensemble_workflow_extend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Single Variable Perturbation Method</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Adding model noise by using custom hooks.">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_05_model_perturbation_hook_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05_model_perturbation_hook.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model Hook Injection: Perturbation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example will demonstrate how to run a simple inference workflow to generate a forecast and...">

.. only:: html

  .. image:: /examples/images/thumb/sphx_glr_06_seasonal_statistics_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06_seasonal_statistics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Statistical Inference</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/01_simple_workflow
   /examples/02_ensemble_workflow
   /examples/03_corrdiff_inference
   /examples/04_ensemble_workflow_extend
   /examples/05_model_perturbation_hook
   /examples/06_seasonal_statistics


Extending Earth2Studio
----------------------

Examples focused on demonstrating how to extend Earth-2 Studio with user-defined
components.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom prognostic model">

.. only:: html

  .. image:: /examples/extend/images/thumb/sphx_glr_01_custom_prognostic_thumb.png
    :alt:

  :ref:`sphx_glr_examples_extend_01_custom_prognostic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Prognostic Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom diagnostic model">

.. only:: html

  .. image:: /examples/extend/images/thumb/sphx_glr_02_custom_diagnostic_thumb.png
    :alt:

  :ref:`sphx_glr_examples_extend_02_custom_diagnostic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Diagnostic Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Implementing a custom data source">

.. only:: html

  .. image:: /examples/extend/images/thumb/sphx_glr_03_custom_datasource_thumb.png
    :alt:

  :ref:`sphx_glr_examples_extend_03_custom_datasource.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extending Data Sources</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/extend/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
